fix: sidebar hide scrollbar

--- a/src/components/Dashboard/Sidebar/sidebar.module.scss
+++ b/src/components/Dashboard/Sidebar/sidebar.module.scss
@@ -12,6 +12,11 @@
   overflow-y: scroll;
   gap: 15px;
 
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   @media screen and (max-width: 1100px) {
     padding: 20px 10px;
